# instagram-api-v1

./: README.md  app.py  pyproject.toml
Controller/: IgController.py
